Fix gap on right side of the mobile view

--- a/catalog/view/theme/default/stylesheet/custom/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/custom/stylesheet.css
@@ -13,8 +13,8 @@
 }
 
 .m-container {
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .button1 {
